cabal-version:      2.4
name:               blob-tile-generator
version:            0.1.0.0

author:             Hiroki Tokunaga
maintainer:         tokusan441@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

common common
    build-depends:  base >= 4.14.3 && < 4.15
                  , lens >= 5.1 && < 5.2
                  , JuicyPixels >= 3.3.7 && < 3.4
                  , JuicyPixels-extra >= 0.5.2 && < 0.6
    ghc-options:    -Wall -Werror

Test-Suite spec
    import:             common
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      BlobTileGeneratorSpec
    build-depends:      blob-tile-generator
                      , hspec >= 2.9.1 && < 2.10
    hs-source-dirs:     tests
    default-Language:   Haskell2010

library
    import:             common
    hs-source-dirs:     src
    exposed-modules:    BlobTileGenerator
    default-language:   Haskell2010

executable blob-tile-generator
    import:             common
    main-is:            Main.hs
    build-depends:      blob-tile-generator
    hs-source-dirs:     app
    default-language:   Haskell2010
